--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,11 +10,27 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: laravel_test
+          MYSQL_USER: laravel
+          MYSQL_PASSWORD: laravel
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Start Sail services (this assumes your Sail configuration is available)
+      # Start Laravel Sail services
       - name: Start Laravel Sail
         run: ./vendor/bin/sail up -d
 
@@ -27,14 +43,12 @@ jobs:
       - name: Run Migrations
         run: ./vendor/bin/sail php artisan migrate --force
 
-      # Run tests with code coverage using Laravel's built-in test command (which supports parallel testing if desired)
       - name: Run Tests with Coverage
         run: |
-          # Run tests inside Sail; adjust --coverage options as needed
+          export COLUMNS=120
           ./vendor/bin/sail php artisan test --env=testing --coverage --coverage-html=coverage --coverage-clover=coverage/clover.xml
 
-      # Run a custom PHP script to check if the coverage meets the minimum threshold.
-      # (Ensure you have created a file like check_coverage.php in your project root)
+      # Custom coverage checker script (assumes check_coverage.php exists in project root)
       - name: Check Coverage Threshold
         run: php check_coverage.php
 
@@ -43,7 +57,8 @@ jobs:
         with:
           name: coverage-report
           path: coverage
+          if-no-files-found: 'warn'
 
-      # Shut down Sail services when done
+      # Stop Laravel Sail services
       - name: Stop Laravel Sail
         run: ./vendor/bin/sail down
