--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests with CI Env
 
 on:
   push:
@@ -9,47 +9,38 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: laravel_test
-          MYSQL_USER: laravel
-          MYSQL_PASSWORD: laravel
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
+    env:
+      # You can also define global environment variables here.
+      APP_ENV: testing
+      # For example, if you want to use an in-memory SQLite database:
+      DB_CONNECTION: sqlite
+      DB_DATABASE: ':memory:'
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Install composer dependencies
       - name: Install Composer Dependencies
         run: composer install --prefer-dist --no-interaction --no-progress
 
-      - name: List vendor/bin directory (for debugging)
-        run: ls -la vendor/bin
-
-      - name: Start Laravel Sail
-        run: ./vendor/bin/sail up -d
-
-      - name: Copy .env.testing to .env
-        run: cp .env.testing .env
+      # Copy the CI-specific environment file to .env
+      - name: Setup CI Environment
+        run: cp .env.ci .env
 
       - name: Generate Application Key
-        run: ./vendor/bin/sail php artisan key:generate
+        run: php artisan key:generate
 
       - name: Run Migrations
-        run: ./vendor/bin/sail php artisan migrate --force
+        run: php artisan migrate --force
 
-      - name: Run Tests
-        run: ./vendor/bin/sail php artisan test --env=testing
+      # Run tests with coverage
+      - name: Run Tests with Coverage
+        run: php artisan test --env=testing --coverage --coverage-html=coverage --coverage-clover=coverage/clover.xml
 
-      - name: Stop Laravel Sail
-        run: ./vendor/bin/sail down
+      # Upload coverage report (warn if no files found)
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: coverage-report
+          path: coverage
+          if-no-files-found: 'warn'
