--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,12 @@
-name: Run Tests with PHP 8.2
+name: Run Tests
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   tests:
@@ -14,15 +16,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Run Tests in PHP 8.2 Container
+      - name: Run Tests in PHP 8.2 Sail Container
         run: |
           docker run --rm \
             -v $(pwd):/opt/project \
             -w /opt/project \
-            laravel/sail-8.2/app:latest \
-            bash -c "\
-              composer install --prefer-dist --no-interaction && \
-              cp .env.testing .env && \
-              php artisan key:generate && \
-              php artisan migrate --force && \
-              php artisan test --env=testing"
+            laravelsail/php82-composer:latest \
+            bash -c "composer install --prefer-dist --no-interaction && \
+                     cp .env.testing .env && \
+                     php artisan key:generate && \
+                     php artisan migrate --force && \
+                     php artisan test --env=testing"
