--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,11 +2,9 @@ name: Run Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   tests:
@@ -16,14 +14,23 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Run Tests in PHP 8.2 Sail Container
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, bcmath, pdo_sqlite
+          ini-values: post_max_size=256M, upload_max_filesize=256M
+
+      - name: Install Composer Dependencies
+        run: composer install --prefer-dist --no-interaction --no-progress
+
+      - name: Setup CI Environment
         run: |
-          docker run --rm \
-            -v $(pwd):/opt/project \
-            -w /opt/project \
-            laravelsail/php82-composer:latest \
-            bash -c "composer install --prefer-dist --no-interaction && \
-                     cp .env.testing .env && \
-                     php artisan key:generate && \
-                     php artisan migrate --force && \
-                     php artisan test --env=testing"
+          cp .env.ci .env
+          php artisan key:generate
+
+      - name: Run Migrations
+        run: php artisan migrate --force
+
+      - name: Run Tests
+        run: php artisan test --env=testing
