--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run Tests with Sail
+name: Run Tests
 
 on:
   push:
@@ -14,28 +14,24 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Install composer dependencies
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, bcmath, pdo_mysql
+          ini-values: post_max_size=256M, upload_max_filesize=256M
+
       - name: Install Composer Dependencies
         run: composer install --prefer-dist --no-interaction --no-progress
 
-      # Copy your CI-specific env file (for testing, using SQLite in-memory for example)
-      - name: Setup CI Environment
+      - name: Setup Environment
         run: |
-          cp .env.ci .env
+          # Use the CI-specific environment file
+          cp .env.testing .env
           php artisan key:generate
 
-      # Start Laravel Sail services
-      - name: Start Laravel Sail
-        run: ./vendor/bin/sail up -d
-
-      # Run migrations (if needed)
       - name: Run Migrations
-        run: ./vendor/bin/sail php artisan migrate --force
+        run: php artisan migrate --force
 
-      # Run tests
       - name: Run Tests
-        run: ./vendor/bin/sail php artisan test --env=testing
-
-      # Stop Laravel Sail services
-      - name: Stop Laravel Sail
-        run: ./vendor/bin/sail down
+        run: php artisan test --env=testing
