--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Countrypedia
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:Rk6y4VYj62AVww6mdRSnUnfvNCwyaeuTapWirJgZ330=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -20,14 +20,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+CACHE_DRIVER=array
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=testing
 DB_USERNAME=sail
 DB_PASSWORD=password
 
-SESSION_DRIVER=database
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,7 +36,7 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
 CACHE_STORE=database
 # CACHE_PREFIX=
