--- a/.env.ci
+++ b/.env.ci
@@ -20,9 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
 CACHE_DRIVER=array
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=testing
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
