--- a/.env.ci
+++ b/.env.ci
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 
 CACHE_DRIVER=array
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=sail
