--- a/.env.ci
+++ b/.env.ci
@@ -24,9 +24,9 @@ CACHE_DRIVER=array
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=testing
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_DATABASE=test_database
+DB_USERNAME=test_user
+DB_PASSWORD=test_password
 
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
