--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,4 @@ jobs:
         run: php artisan migrate --force
 
       - name: Run Tests
-        run: php artisan test --env=testing
+        run: ./vendor/bin/phpunit --configuration phpunit.ci.xml
