--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "name": "Laravel Sail Codespace",
-  "image": "laravelsail/php82-composer:latest",
+  "dockerComposeFile": "../docker-compose.yml",
+  "service": "laravel.test",
   "workspaceFolder": "/var/www/html",
   "postCreateCommand": "composer install && php artisan key:generate && php artisan migrate",
   "forwardPorts": [80, 5173],
@@ -18,5 +19,5 @@
     "ryannaddy.laravel-artisan",
     "shufo.vscode-blade-formatter"
   ],
-  "remoteUser": "root"
+  "remoteUser": "vscode"
 }
