--- a/Docker/Runtimes/8.4/Dockerfile
+++ b/Docker/Runtimes/8.4/Dockerfile
@@ -5,6 +5,8 @@ LABEL maintainer="Taylor Otwell"
 ARG NODE_VERSION=22
 ARG MYSQL_CLIENT="mysql-client"
 ARG POSTGRES_VERSION=17
+ARG WWWGROUP=1000
+ARG WWWUSER=1000
 
 WORKDIR /var/www/html
 
@@ -12,8 +14,6 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=UTC
 ENV SUPERVISOR_PHP_COMMAND="/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan serve --host=0.0.0.0 --port=80"
 ENV SUPERVISOR_PHP_USER="sail"
-ENV WWWGROUP=1000
-ENV WWWUSER=1000
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
