--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "tailwindcss": "^3.4.17",
         "vite": "^6.2.4",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "ionicons": "^7.4.0"
     }
 }
