--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
 networks:
     sail:
         driver: bridge
+        driver_opts:
+            com.docker.network.driver.mtu: 1500
 volumes:
     sail-mysql:
         driver: local
