--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+APP_ALLOW_USER_REGISTRATION=true
+APP_USER_REGISTRATION_EXCLUSION_LIST=true
